Rapid Prd/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>AE_Instructions__c</fullName>
        <label>AE Instructions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_Buy_Rate_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Buy Rate Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_PreferredSelect_Addendum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Preferred/Select Addendum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Premium_MCA_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Premium MCA Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Task 310 - This field will be deleted once the data is validated</description>
        <label>Activity Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Submitting</fullName>
                </value>
                <value>
                    <fullName>Funding</fullName>
                </value>
                <value>
                    <fullName>High Signing Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Owner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>User Type must be Standard SalesForce.</errorMessage>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.OwnerId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BA_Notes__c</fullName>
        <label>BA Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BD_Notification_Override__c</fullName>
        <formula>IF(
 BD_Send_Cmpn_Owner__c=&quot;gmackenzie@rapidadvance.com&quot; ||
 BD_Send_Cmpn_Owner__c=&quot;rfleischmann@rapidadvance.com&quot; ||
 BD_Send_Addtl_Owner__c=&quot;gmackenzie@rapidadvance.com&quot; ||
 BD_Send_Addtl_Owner__c=&quot;rfleischmann@rapidadvance.com&quot;,
true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Notification to BD Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Send_Addtl_Owner__c</fullName>
        <label>Send Notifications Additional Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BD_Send_Cmpn_Owner__c</fullName>
        <label>Send Notifications Campaign Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BD_Send_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will send notifications to Campaign Owners if this flag is enabled.</description>
        <inlineHelpText>Send notifications to Primary Campaign Owner(s) upon Stage change.</inlineHelpText>
        <label>Send Notifications to BD Owner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bonus_Suppression_Date__c</fullName>
        <formula>ISO_Account__r.Bonus_Suppression_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Suppression Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bonus_Suppression_Old__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This partner is not eligible to receive Rapid bonuses and is exempt from any bonus exceptions.</description>
        <label>Bonus Suppression (Old)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bonus_Suppression__c</fullName>
        <formula>ISO_Account__r.Bonus_Suppression__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Suppression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Out_Addendum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker Out Addendum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Out_New_Split__c</fullName>
        <description>New Deal Split for Broker Out</description>
        <label>Broker Out New Split</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Out_Renewal_Split__c</fullName>
        <description>Renewal Split for Broker Out</description>
        <label>Broker Out Renewal Split</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Buy_Rate_Max_Upsell_Commission__c</fullName>
        <label>Buy Rate Max Upsell Commission</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CA_Lenders_License__c</fullName>
        <formula>Text(ISO_Account__r.CA_Lenders_License__c)</formula>
        <label>CA Lenders License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Lenders_License_old__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CA Lenders License_old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Contact_Email__c</fullName>
        <description>contact&apos;s email address</description>
        <label>Campaign Contact Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Contact_Number__c</fullName>
        <description>Contacts phone number</description>
        <label>Campaign Contact Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Contact__c</fullName>
        <description>The partner contact person</description>
        <label>Campaign Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name_for_reporting__c</fullName>
        <description>Use this field in place of the Campaign Name when used in reports,workflows,assignment rules...etc.</description>
        <label>Campaign Name (for reporting)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Notes__c</fullName>
        <label>Campaign Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <label>Campaign Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Brokers</fullName>
                </value>
                <value>
                    <fullName>Chase Paymentech</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>First Data</fullName>
                </value>
                <value>
                    <fullName>Humboldt Merchant Services</fullName>
                </value>
                <value>
                    <fullName>Merrick Bank</fullName>
                </value>
                <value>
                    <fullName>NOVA</fullName>
                </value>
                <value>
                    <fullName>NPC</fullName>
                </value>
                <value>
                    <fullName>RBSLynk</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Tier I Acquirers/ISOs</fullName>
                </value>
                <value>
                    <fullName>Tier II Acquirers/ISOs</fullName>
                </value>
                <value>
                    <fullName>Tier III Acquirers/ISOs</fullName>
                </value>
                <value>
                    <fullName>Tier IV Acquirers/ISOs</fullName>
                </value>
                <value>
                    <fullName>TriSource Solutions</fullName>
                </value>
                <value>
                    <fullName>TSYS</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canadian_Contract_Received_and_Signed__c</fullName>
        <label>Canadian Contract Received and Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Sensitive_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case-Sensitive ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claw_back_language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claw-back language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Calls_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Calls Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collections_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collections Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partners</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Pending, In Progress, Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (Collections Account)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitive_Pricing_Clause__c</fullName>
        <label>Competitive Pricing Clause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Received_Signed2__c</fullName>
        <label>Contract Received &amp; Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Received_Signed__c</fullName>
        <formula>ISO_Account__r.Contract_Received_Signed__c</formula>
        <label>Contract Received &amp; Signed_OLD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Sent__c</fullName>
        <label>Welcome Packet/Contract Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cost_per_funded_deal__c</fullName>
        <formula>Total_Lead_Cost__c / NumberOfWonOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per funded deal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_CA_License_was_received__c</fullName>
        <formula>ISO_Account__r.Date_CA_License_was_received__c</formula>
        <label>Date CA License was received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_CA_License_was_received_delete__c</fullName>
        <label>Date CA License was received_delete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Pricing__c</fullName>
        <inlineHelpText>Who communicates quoted offers to the client</inlineHelpText>
        <label>Deal Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RapidAdvance</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decline_Program_Effective_Date__c</fullName>
        <label>Decline Program Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decline_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Decline Program Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CampaignsleadOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CampaignsAssociated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_not_offer_Decline_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>With the new partner type ( bank/ credit union etc) that we will not want to market the decline program with we will need a check box on the campaign or account level that is labeled.</description>
        <label>Do not offer Decline Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dormant_Partner_Date__c</fullName>
        <label>Dormant Partner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_Signature_Permitted__c</fullName>
        <label>E-Signature Permitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Executed_Contract_Sent__c</fullName>
        <label>Executed Contract Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9LSP__F9PS_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Five9 List</label>
        <referenceTo>Five9LSP__Five9_List__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Five9_DNIS__c</fullName>
        <label>Five9 DNIS</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallNow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets Five9 callNowMode to &apos;ANY&apos;</description>
        <inlineHelpText>All new campaign members are added to Five9 list with &apos;call now mode&apos; set to &apos;ANY&apos;</inlineHelpText>
        <label>Five9 Call Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Endpoint__c</fullName>
        <label>Five9 WS Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Password__c</fullName>
        <label>Five9 User Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ReportEmail__c</fullName>
        <label>Five9 Report Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Five9__Five9User__c</fullName>
        <label>Five9 User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9list__c</fullName>
        <description>Five9 dialing list name</description>
        <label>Five9list</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Dormant_Partner_Date__c</fullName>
        <formula>Dormant_Partner_Date__c + 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Dormant Partner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Contract_Commission_Base__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Partner is to be paid on the Full Contract Amount on any and all Renewal deals</description>
        <label>Renewal Commission on Gross</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funded_Date__c</fullName>
        <formula>Opportunity__r.Funded_by_WC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Funding_Channel__c</fullName>
        <formula>IF(  OR(   Name = &quot;*100PercentPaidRenewals*&quot;,  Name = &quot;*Direct100%PaidRenewals*&quot;, 
Name = &quot;*Partner100%PaidRenewals*&quot;),&quot;Re-Acquisition&quot;,IF( OR(Text(Payment_Type__c) = &quot;Pay-Per-Lead&quot;, Text(Payment_Type__c) = &quot;No Fee&quot;), &quot;Direct Acquisition&quot;, 
IF(AND (Text(Payment_Type__c) = &quot;Pay-Per-Funding&quot;, (AND(Text( Lead_Ownership__c) = &quot;RapidAdvance&quot;, Text( Deal_Pricing__c) = &quot;RapidAdvance&quot;))), &quot;Strategic Funding&quot;,&quot;Distribution&quot; )))</formula>
        <label>Funding Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Partner_Date__c</fullName>
        <label>Funding Partner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Partner_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funding Partner Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Leads__c</fullName>
        <label>Gross Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Activity_Partner_Date__c</fullName>
        <label>High Activity Partner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISO_Account_Categories__c</fullName>
        <formula>TEXT( ISO_Account__r.Category__c )</formula>
        <label>ISO Account Categories</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Account_Channel__c</fullName>
        <formula>TEXT(ISO_Account__r.Partner_Channel__c)</formula>
        <label>ISO Account Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactive_Partner_Date__c</fullName>
        <label>Inactive Partner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Funding_Survey__c</fullName>
        <formula>ISO_Account__r.Initial_Funding_Survey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Funding Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_MCA_Commission_Base__c</fullName>
        <label>Initial Commission Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Amount</fullName>
                </value>
                <value>
                    <fullName>Payback Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jan_09_CPL__c</fullName>
        <label>Jan 09 CPL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Opportunity_Created_Date__c</fullName>
        <formula>Max(year(datevalue(Opportunity__r.CreatedDate )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Opportunity Created Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Ownership__c</fullName>
        <inlineHelpText>Who is responsible for communicating directly with the client.</inlineHelpText>
        <label>Lead Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RapidAdvance</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leads_Marketing_Cost__c</fullName>
        <label>Leads Marketing Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Leads_per_Hour__c</fullName>
        <label>Leads per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Funded_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Recent Funded Deal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Most Recent Funded Deal</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Loan__c</fullName>
        <label>New Loan Commission</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_MCA_Initial_Commission__c</fullName>
        <description>New ISO Initial MCA Commission</description>
        <label>New MCA Initial Commission</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_MCA_Residual_Commission__c</fullName>
        <label>New MCA Residual Commission</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Leads__c</fullName>
        <formula>NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofFundings__c</fullName>
        <formula>NumberOfWonOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NumberofFundings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P2_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner signed through the P2 relationship</description>
        <label>P2 User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POS_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner signed through our P2/POS relationship</description>
        <label>POS Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_API__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Bank_Wiring_Instructions__c</fullName>
        <label>Partner Bank Wiring Instructions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Campaign_Team__c</fullName>
        <label>Partner Campaign Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Category_BD__c</fullName>
        <formula>Text(ISO_Account__r.Category__c )</formula>
        <label>Partner Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Category__c</fullName>
        <label>Partner Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Asset Backed Lender</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Credit Card Processor</fullName>
                </value>
                <value>
                    <fullName>Credit Union</fullName>
                </value>
                <value>
                    <fullName>Equipment Leasing Company</fullName>
                </value>
                <value>
                    <fullName>High Quality Originator</fullName>
                </value>
                <value>
                    <fullName>High Volume Originator</fullName>
                </value>
                <value>
                    <fullName>ISO</fullName>
                </value>
                <value>
                    <fullName>Lead Generator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Channel__c</fullName>
        <formula>Text( ISO_Account__r.Partner_Channel__c )</formula>
        <label>Partner Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Interacation__c</fullName>
        <label>Partner Interacation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Direct to Consumer</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Sales_Assistant_Name2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Sales Assistant Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns8_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Assistant__c</fullName>
        <description>Email Addresses of Sales Assistant assigned to this partner</description>
        <label>Partner Sales Assistant Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing Partner</fullName>
                </value>
                <value>
                    <fullName>Referral Partner</fullName>
                </value>
                <value>
                    <fullName>Pricing Partner w/ AE Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <inlineHelpText>How the partner is compensated for leads or funded deals.</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pay-Per-Funding</fullName>
                </value>
                <value>
                    <fullName>Pay-Per-Lead</fullName>
                </value>
                <value>
                    <fullName>No Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Qual_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Qual Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Qual_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Qual Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Select_Addendum__c</fullName>
        <label>Preferred / Select Addendum</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Premium_MCA_Effective_Date__c</fullName>
        <label>Premium MCA Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Price_Per_Closed_Deal__c</fullName>
        <formula>ActualCost  /  NumberOfWonOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Per Closed Deal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Per_Lead__c</fullName>
        <description>Cost per lead.</description>
        <label>Price Per Lead</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProMED_Campaigns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProMED Campaigns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <description>Code used to identify promotional marketing material such as postcards.</description>
        <label>Promotion Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <label>Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Loan_Commission__c</fullName>
        <label>Renewal Loan Commission</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_MCA_Initial_Commission__c</fullName>
        <label>Renewal MCA Initial Commission</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_MCA_Residual_Commission__c</fullName>
        <label>Renewal MCA Residual Commission</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Response_Rate__c</fullName>
        <formula>Gross_Leads__c/NumberSent</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SWIFT_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SWIFT Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Director_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Director Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Member_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Member #1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Member_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Member #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>